src/test/ui/error-codes/E0529.stderr
error[E0529]: expected an array or slice, found `f32`
  --> $DIR/E0529.rs:4:9
   |
LL |         [a, b] => {
   |         ^^^^^^ pattern cannot match with input type `f32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0529`.
